добавлены правки ДЗ №4